# Picnic

./: .ci-build.sh  .ci-script.sh  .clang-format  .gitignore  .travis-build.sh  .travis-script.sh  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  aligned_alloc.c  appveyor.yml  bitstream.c  bitstream.h  compat.c  compat.h  config.h.in  cpu.c  cpu.h  endian_compat.h  io.c  io.h  kdf_shake.c  kdf_shake.h  lowmc.c  lowmc.c.i  lowmc.h  lowmc_126_126_4.c  lowmc_126_126_4.h  lowmc_126_126_5.c  lowmc_126_126_5.h  lowmc_128_128_182.c  lowmc_128_128_182.h  lowmc_128_128_20.c  lowmc_128_128_20.h  lowmc_129_129_4.c  lowmc_129_129_4.h  lowmc_129_129_4_fns_s128.h  lowmc_129_129_5.c  (+96 more)
.github/workflows/: build-cygwin.yaml  build.yaml
L1_FS/: api.h
L1_UR/: api.h
L3_FS/: api.h
L3_UR/: api.h
L5_FS/: api.h
L5_UR/: api.h
cmake/: CheckSIMD.cmake  Findm4ri.cmake  Findvalgrind.cmake  check-simd.c
picnic2_L1_FS/: api.h
picnic2_L3_FS/: api.h  sign.c
picnic2_L5_FS/: api.h  sign.c
picnic3_L1/: api.h  picnic3_l1.c  picnic3_l1.h  sign.c
picnic3_L1_FS/: sign.c
picnic3_L3/: api.h  crypto_sign.c  picnic3_l3.c  picnic3_l3.h
picnic3_L3_FS/: api.h
picnic3_L5/: api.h  picnic3_l5.c  picnic3_l5.h  sign.c
picnic_L1_FS/: api.h  crypto_sign.c  picnic_l1_fs.c  picnic_l1_fs.h
picnic_L1_UR/: api.h  crypto_sign.c  picnic_l1_ur.c  picnic_l1_ur.h
picnic_L1_full/: api.h  picnic_l1_full.c  picnic_l1_full.h  sign.c
picnic_L3_FS/: api.h  picnic_l3_fs.c  picnic_l3_fs.h  sign.c
picnic_L3_UR/: api.h  picnic_l3_ur.c  picnic_l3_ur.h  sign.c
picnic_L3_full/: api.h  crypto_sign.c  picnic_l3_full.c  picnic_l3_full.h
picnic_L5_FS/: api.h  crypto_sign.c  picnic_l5_fs.c  picnic_l5_fs.h
picnic_L5_UR/: api.h  picnic_l5_ur.c  picnic_l5_ur.h  sign.c
picnic_L5_full/: api.h  picnic_l5_full.c  picnic_l5_full.h  sign.c
sha3/: KeccakHashtimes4.c  KeccakHashtimes4.h  KeccakSpongeWidth1600times4.c  KeccakSpongeWidth1600times4.h  KeccakSpongetimes4.c  KeccakSpongetimes4.h  KeccakSpongetimes4.inc  s390_cpacf.h
sha3/avx2/: KeccakP-1600-AVX2.s  KeccakP-1600-times4-SIMD256.c
sha3/avx2x4/: KeccakP-1600-times4-SIMD256.c  SIMD256-config.h
sha3/opt64/: KeccakP-1600-opt64.c
tests/: CMakeLists.txt  api_test.c  bitstream_test.c  extended_picnic_test.c  extended_picnic_test.cpp  kat_l1_fs.c.i  kat_l1_full.txt  kat_l1_ur.c.i  kat_l3_fs.c.i  kat_l3_ur.c.i  kat_l5_full.txt  kat_l5_ur.c.i  kat_picnic2_l1_fs.txt  kat_picnic2_l3_fs.txt  kat_picnic2_l5_fs.txt  kat_picnic3_l1.txt  kat_picnic3_l1_fs.txt  kat_picnic3_l3.txt  kat_picnic3_l3_fs.txt  kat_picnic3_l5.txt  kat_picnic3_l5_fs.txt  kats_test.c  kats_test.cpp  kdf_shake256_test.c  lowmc_str_test.c  lowmc_test.c  m4ri_utils.h  mpc_test.c  mzd_test.c  mzd_utils.h  picnic_param_test.cpp  picnic_test.c  picnic_test.cpp  shake_test.c  shift_test.c  test_utils.h  transpose_test.c  utils.c.i  utils.cpp  utils.h
tools/: bench.c  bench.cpp  bench_lowmc.c  bench_lowmc.cpp  bench_timing.c  bench_timing.h  bench_utils.c  bench_utils.h  calculate-sizes.sh  example.c  genparams.c  sizes.py  utils.cpp  visualize_signature.c
